# cargo-rail

./: .gitignore  Cargo.toml  LICENSE  PRE_V1.md  README.md  TESTING.md  deny.toml  justfile  rail.toml  rail.toml.backup  rust-toolchain.toml  rustfmt.toml
.config/: nextest.toml
.github/: actions-lock.yaml
.github/actions/setup/: action.yaml
.github/workflows/: commit.yaml
crates/cargo-rail/: Cargo.toml
crates/cargo-rail/src/: main.rs
crates/cargo-rail/src/adapters/: cargo.rs  descriptor.rs  mod.rs  node.rs
crates/cargo-rail/src/cargo/: files.rs  metadata.rs  mod.rs  transform.rs
crates/cargo-rail/src/checks/: git_notes.rs  mod.rs  remotes.rs  runner.rs  security_config.rs  ssh.rs  trait_def.rs  workspace.rs
crates/cargo-rail/src/commands/: doctor.rs  init.rs  mappings.rs  mod.rs  split.rs  status.rs  sync.rs
crates/cargo-rail/src/commands/release/: changelog.rs  check.rs  finalize.rs  github.rs  graph.rs  mod.rs  plan.rs  prepare.rs  publish.rs  semver.rs  semver_check.rs  tags.rs  verify.rs
crates/cargo-rail/src/core/: config.rs  conflict.rs  error.rs  mapping.rs  mod.rs  plan.rs  security.rs  split.rs  sync.rs  transform.rs
crates/cargo-rail/src/core/vcs/: git.rs  mod.rs
crates/cargo-rail/src/ui/: progress.rs
crates/test-crate-a/: Cargo.toml  README.md
crates/test-crate-a/src/: lib.rs
crates/test-crate-b/: Cargo.toml  README.md
crates/test-crate-b/src/: lib.rs
docs/: GIT_NOTES_CONFLICT_RESOLUTION.md
src/: main.rs  utils.rs
src/cargo/: files.rs  helpers.rs  metadata.rs  mod.rs  transform.rs
src/checks/: edition_consistency.rs  git_notes.rs  graph_cycles.rs  mod.rs  msrv.rs  patch_replace.rs  remotes.rs  runner.rs  security_config.rs  tier_violations.rs
src/commands/: affected.rs  check.rs  clippy.rs  doctor.rs  lint.rs  mappings.rs  mod.rs  quality.rs  release.rs  split.rs  status.rs  sync.rs  test.rs
src/core/: config.rs  conflict.rs  context.rs  error.rs  executor.rs  mapping.rs  mod.rs  plan.rs  security.rs  split.rs  sync.rs
src/core/vcs/: git.rs  mod.rs  system_git.rs  system_git_ops.rs
src/graph/: affected.rs  mod.rs  workspace_graph.rs
src/lint/: deps.rs  mod.rs  versions.rs
src/quality/: changelog.rs  duplicates.rs  engine.rs  mod.rs  unused_deps.rs
src/release/: metadata.rs  mod.rs  plan.rs
src/ui/: progress.rs
tests/integration/: helpers.rs  mod.rs  test_affected.rs  test_init.rs  test_lint.rs  test_node.rs  test_release.rs  test_split.rs  test_sync.rs  test_workflow.rs
