[package]
name = "cargo-rail"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"
authors = ["cargo-rail contributors"]
description = "A modern, pure Rust implementation of source code transformation and migration tooling"

[dependencies]
# Git operations (pure Rust gitoxide)
gix = "0.74.1"

# CLI parsing with completions
clap = { version = "4.5.51", features = ["derive", "cargo"] }
anstyle = "1.0.13"

# Workspace introspection
cargo_metadata = "0.23.0"

# Lossless TOML editing (preserves formatting)
toml_edit = "0.23.7"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Serialization for config
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

# Ordered map for preserving commit order
indexmap = "2.7.1"

[dev-dependencies]
tempfile = "3.23.0"

[[test]]
name = "integration"
path = "../../tests/integration/mod.rs"
