[package]
name = "cargo-rail"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"
authors = ["loadingalias"]
description = "A modern, pure Rust implementation of source code transformation and migration tooling"

[dependencies]
# Git operations (pure Rust gitoxide)
gix = "0.74.1"

# CLI parsing with completions
clap = { version = "4.5.51", features = ["derive", "cargo"] }
anstyle = "1.0.13"

# Workspace introspection
cargo_metadata = "0.23.0"

# Lossless TOML editing (preserves formatting)
toml_edit = { version = "0.23.7", features = ["serde"] }

# Error handling
anyhow = "1.0.100"

# Serialization for config
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
saphyr = "0.0.6"

# Cryptographic hashing for plan IDs
sha2 = "0.10.9"

# Progress indicators (allocation-free, concurrency-optimized)
linya = "0.3.1"

# Path utilities
pathdiff = "0.2.3"

# Parallelism and concurrency
rayon = "1.11.0"

[dev-dependencies]
tempfile = "3.23.0"
criterion = "0.7.0"

[[test]]
name = "integration"
path = "../../tests/integration/mod.rs"
